tests/feat/30.d
loop
    print "ok"
    exit  // ok
end

var f := func () is exit; end;  // error
